--- a/src/components/sidebar/sidebar.styles.scss
+++ b/src/components/sidebar/sidebar.styles.scss
@@ -6,7 +6,6 @@
   height: 100%;
   width: 60%;
   max-width: 400px;
-  box-shadow: 2px 0 2px rgba(0,0,0,.3);
   z-index: 200;
   display: flex;
   flex-direction: column;
