--- a/src/pages/contact/contact.styles.scss
+++ b/src/pages/contact/contact.styles.scss
@@ -1,4 +1,3 @@
 .contact {
-  height: calc(100vh - 81px - 300px - 5rem);
-  min-height: 600px;
+  min-height: calc(100vh - 81px - 300px - 5rem);
 }
